[tool.poetry]
name = "yandexrasptelegram"
version = "0.1.0"
description = ""
authors = ["ZhuravlevX"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^3.15.0"
requests = "^2.32.3"
babel = "^2.16.0"
pytz = "^2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
