[tool.poetry]
name = "yandexrasptelegram"
version = "0.1.0"
description = "Creates a Telegram bot to display up-to-date information about train departures and arrivals based on Yandex API."
authors = ["ZhuravlevX", "KryptonFox"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^3.15.0"
requests = "^2.32.3"
babel = "^2.16.0"
pytz = "^2024.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
